5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1585_1015.log
== TEST (2019-03-26 11:07:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
-- OUTPUT:
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:08:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(min(num2,num3))
print(min(num3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(min(num3))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:14:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3 - min(num1,num2,num3) - max(num1,num2,num3)) 
-- EXECUTION TIME:
0.129001
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:14:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3 - min(num1,num2,num3) - max(num1,num2,num3)) 
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:17:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3(min(num1,num2,num3) - max(num1,num2,num3)) 
-- EXECUTION TIME:
0.163203
-- ERROR:
  File "/home/codebench/codes/1585/1015/main.py", line 10
    
                                                                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:19:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3(min(num1,num2,num3) - max(num1,num2,num3)) 
-- ERROR:
File "XXXX", line 10
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3 - min(num1,num2,num3) - max(num1,num2,num3)) 
-- EXECUTION TIME:
0.192052
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:19:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num1 + num2 + num3 - min(num1,num2,num3) - max(num1,num2,num3)) 
-- EXECUTION TIME:
0.126314
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:22:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
var = (num1 + num2 + num3 - min(num1,num2,num3)
print(var - max(num1,num2,num3))		 
-- EXECUTION TIME:
0.209462
-- ERROR:
  File "/home/codebench/codes/1585/1015/main.py", line 10
    print(var - max(num1,num2,num3))		 
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:25:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(num3)
print(max(num1,num2,num3))

	 
-- EXECUTION TIME:
0.114894
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:29:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
vlr = min(num1,num2,num3)
vlr2 = max(num1,num2,num3)
vlr3 = num1 + num2 + num3 - vlr - vlr2
print(vlr)
print(vlr2)
print(vlr3)
	 
-- EXECUTION TIME:
0.204652
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:29:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
vlr = min(num1,num2,num3)
vlr2 = max(num1,num2,num3)
vlr3 = num1 + num2 + num3 - vlr - vlr2
print(vlr)
print(vlr2)
print(vlr3)
	 
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:31:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
vlr = min(num1,num2,num3)
vlr2 = max(num1,num2,num3)
vlr3 = (num1 + num2 + num3) - (vlr) - (vlr2)
print(vlr)
print(vlr2)
print(vlr3)
	 
-- EXECUTION TIME:
0.191828
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:31:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
vlr = min(num1,num2,num3)
vlr2 = max(num1,num2,num3)
vlr3 = (num1 + num2 + num3) - (vlr) - (vlr2)
print(vlr)
print(vlr2)
print(vlr3)
	 
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:34:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(max(num1,num2,num3))
print(num3)
-- EXECUTION TIME:
0.195628
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:35:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
num1 = int(input("mumero 1:"))
num2 = int(input("numero 2:"))
num3 = int(input("numero 3:"))
print(min(num1,num2,num3))
print(num3)
print(max(num1,num2,num3))

-- EXECUTION TIME:
0.216757
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
